--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Name111111111111111</th>
       <th>Email</th>
       <th>Content</th>
       <th colspan="3"></th>
